feat: trustify recommendations (#526)
* feat: trustify recommendations

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: remove redis requirement and refactor tc package

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: use repository_url as main remediation link

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: remove REDIS dependency from deployment

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: add unit test and remove unused constant

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: update recommendations html report

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>