@@ -19,11 +19,12 @@ package io.github.guacsec.trustifyda.integration.providers;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -40,17 +41,17 @@ import io.github.guacsec.trustifyda.api.PackageRef;
 import io.github.guacsec.trustifyda.api.v5.DependencyReport;
 import io.github.guacsec.trustifyda.api.v5.Issue;
 import io.github.guacsec.trustifyda.api.v5.ProviderReport;
+import io.github.guacsec.trustifyda.api.v5.Remediation;
+import io.github.guacsec.trustifyda.api.v5.RemediationTrustedContent;
 import io.github.guacsec.trustifyda.api.v5.SeverityUtils;
 import io.github.guacsec.trustifyda.api.v5.Source;
 import io.github.guacsec.trustifyda.api.v5.SourceSummary;
-import io.github.guacsec.trustifyda.api.v5.TransitiveDependencyReport;
-import io.github.guacsec.trustifyda.api.v5.UnscannedDependency;
 import io.github.guacsec.trustifyda.model.DependencyTree;
 import io.github.guacsec.trustifyda.model.DirectDependency;
+import io.github.guacsec.trustifyda.model.PackageItem;
 import io.github.guacsec.trustifyda.model.ProviderResponse;
-import io.github.guacsec.trustifyda.model.trustedcontent.IndexedRecommendation;
-import io.github.guacsec.trustifyda.model.trustedcontent.TrustedContentResponse;
-import io.github.guacsec.trustifyda.model.trustedcontent.Vulnerability;
+import io.github.guacsec.trustifyda.model.trustify.Recommendation;
+import io.github.guacsec.trustifyda.model.trustify.Vulnerability;
 
 import jakarta.ws.rs.core.Response;
 
@@ -59,27 +60,18 @@ public class ProviderResponseHandlerTest {
   private static final String NPM_PURL_TYPE = "npm";
   private static final String TEST_PROVIDER = "example";
   private static final String TEST_SOURCE = "test-source";
-  private static final TrustedContentResponse EMPTY_TRUSTED_CONTENT_RESPONSE =
-      new TrustedContentResponse(null, null);
 
   @ParameterizedTest
   @MethodSource("getSummaryValues")
   public void testSummary(
-      Map<String, List<Issue>> issuesData,
-      List<UnscannedDependency> unscanned,
-      DependencyTree tree,
-      SourceSummary expected)
+      Map<String, PackageItem> data, DependencyTree tree, SourceSummary expected, String sourceName)
       throws IOException {
 
     ProviderResponseHandler handler = new TestResponseHandler();
     ProviderReport response =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issuesData, null, unscanned),
-            tree,
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
+        handler.buildReport(Mockito.mock(Exchange.class), new ProviderResponse(data, null), tree);
     assertOkStatus(response);
-    SourceSummary summary = getValidSource(response).getSummary();
+    SourceSummary summary = getValidSource(response, sourceName).getSummary();
 
     assertEquals(expected.getDirect(), summary.getDirect());
     assertEquals(expected.getTotal(), summary.getTotal());
@@ -91,154 +83,124 @@ public class ProviderResponseHandlerTest {
     assertEquals(expected.getRecommendations(), summary.getRecommendations());
     assertEquals(expected.getRemediations(), summary.getRemediations());
     assertEquals(expected.getDependencies(), summary.getDependencies());
-    assertEquals(expected.getUnscanned(), summary.getUnscanned());
   }
 
   private static Stream<Arguments> getSummaryValues() {
     return Stream.of(
-        Arguments.of(
-            Map.of("pkg:npm/aa@1", List.of(buildIssue(1, 5f))),
-            List.of(
-                new UnscannedDependency().ref(new PackageRef("pkg:npm/aaa@1")).reason("aaa"),
-                new UnscannedDependency().ref(new PackageRef("pkg:npm/aaaaa@1")).reason("aaaaa")),
-            buildTree(),
-            new SourceSummary().direct(1).total(1).medium(1).dependencies(1).unscanned(2)),
+        // Case 1: 0 issues 2 recommendations
         Arguments.of(
             Map.of(
-                "pkg:npm/aa@1", List.of(buildIssue(1, 3f)),
-                "pkg:npm/aaa@1", List.of(buildIssue(2, 4f)),
-                "pkg:npm/aba@1", List.of(buildIssue(3, 8f))),
-            List.of(
-                new UnscannedDependency().ref(new PackageRef("pkg:npm/aab@1")).reason("aab"),
-                new UnscannedDependency().ref(new PackageRef("pkg:npm/aabbb@1")).reason("aabbb"),
-                new UnscannedDependency().ref(new PackageRef("pkg:npm/aabbc@1")).reason("aabbc")),
-            buildTree(),
+                "pkg:npm/aa@1",
+                    new PackageItem(
+                        "pkg:npm/aa@1",
+                        buildRecommendation("pkg:npm/aa@2", Collections.emptyMap()),
+                        Collections.emptyList()),
+                "pkg:npm/ab@1",
+                    new PackageItem(
+                        "pkg:npm/ab@1",
+                        buildRecommendation("pkg:npm/ab@2", Collections.emptyMap()),
+                        Collections.emptyList())),
+            tree().direct("aa").direct("ab").build(),
+            new SourceSummary().direct(0).total(0).dependencies(0).recommendations(2),
+            TEST_PROVIDER),
+        // Case 2: 2 issues 0 recommendations
+        Arguments.of(
+            Map.of(
+                "pkg:npm/aa@1", new PackageItem("pkg:npm/aa@1", null, List.of(buildIssue(1, 5f))),
+                "pkg:npm/ab@1", new PackageItem("pkg:npm/ab@1", null, List.of(buildIssue(2, 8f))),
+                "pkg:npm/aaa@1", new PackageItem("pkg:npm/aaa@1", null, List.of(buildIssue(3, 4f))),
+                "pkg:npm/aba@1",
+                    new PackageItem("pkg:npm/aba@1", null, List.of(buildIssue(4, 7f)))),
+            tree().direct("aa").withTransitive("aaa").direct("ab").withTransitive("aab").build(),
+            new SourceSummary().direct(2).transitive(2).total(4).high(2).medium(2).dependencies(4),
+            TEST_SOURCE),
+        // Case 3: 2 issues with 1 remediation and 1 recommendation
+        Arguments.of(
+            Map.of(
+                "pkg:npm/aa@1",
+                    new PackageItem(
+                        "pkg:npm/aa@1",
+                        buildRecommendation("pkg:npm/aa@2", Map.of("ISSUE-001", "Fixed")),
+                        List.of(
+                            buildIssueWithTcRemediation(
+                                1, 5f, "pkg:npm/aa@2-redhat-00001"))), // Issue with remediation (ID
+                // matches)
+                "pkg:npm/ab@1",
+                    new PackageItem(
+                        "pkg:npm/ab@1",
+                        buildRecommendation("pkg:npm/ab@2", Collections.emptyMap()),
+                        Collections.emptyList())), // Recommendation only
+            tree().direct("aa").direct("ab").build(),
             new SourceSummary()
-                .total(3)
                 .direct(1)
-                .transitive(2)
-                .high(1)
+                .total(1)
                 .medium(1)
-                .low(1)
-                .dependencies(3)
-                .unscanned(3)),
+                .dependencies(1)
+                .recommendations(2)
+                .remediations(1),
+            TEST_SOURCE),
+        // Case 4: 2 direct issues with 4 transitive
         Arguments.of(
             Map.of(
-                "pkg:npm/aa@1", List.of(buildIssue(1, 5f)),
-                "pkg:npm/aaa@1", List.of(buildIssue(2, 5f))),
-            null,
-            buildTreeWithDuplicates(),
+                "pkg:npm/aa@1", new PackageItem("pkg:npm/aa@1", null, List.of(buildIssue(1, 5f))),
+                "pkg:npm/ab@1", new PackageItem("pkg:npm/ab@1", null, List.of(buildIssue(2, 7f))),
+                "pkg:npm/aaa@1", new PackageItem("pkg:npm/aaa@1", null, List.of(buildIssue(3, 4f))),
+                "pkg:npm/aab@1", new PackageItem("pkg:npm/aab@1", null, List.of(buildIssue(4, 6f))),
+                "pkg:npm/aba@1", new PackageItem("pkg:npm/aba@1", null, List.of(buildIssue(5, 3f))),
+                "pkg:npm/abb@1",
+                    new PackageItem("pkg:npm/abb@1", null, List.of(buildIssue(6, 8f)))),
+            tree()
+                .direct("aa")
+                .withTransitive("aaa", "aab")
+                .direct("ab")
+                .withTransitive("aba", "abb")
+                .build(),
             new SourceSummary()
-                .total(2)
-                .direct(1)
-                .transitive(1)
-                .medium(2)
-                .dependencies(2)
-                .unscanned(0)));
-  }
-
-  @Test
-  public void testFilterDepsWithoutIssues() throws IOException {
-    Map<String, List<Issue>> issues = Map.of("pkg:npm/aa@1", List.of(buildIssue(1, 5f)));
-    ProviderResponseHandler handler = new TestResponseHandler();
-    DependencyTree tree = buildTree();
-    ProviderReport response =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            tree,
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
-    assertOkStatus(response);
-    assertEquals(1, response.getSources().size());
-    Source report = response.getSources().get(TEST_SOURCE);
-    assertEquals(1, report.getDependencies().size());
-    assertEquals(1, report.getDependencies().get(0).getIssues().size());
-    assertEquals("aa", report.getDependencies().get(0).getRef().name());
-  }
-
-  @Test
-  public void testFilterTransitiveWithoutIssues() throws IOException {
-
-    Map<String, List<Issue>> issues =
-        Map.of(
-            "pkg:npm/aa@1", List.of(buildIssue(1, 3f)),
-            "pkg:npm/aaa@1", List.of(buildIssue(2, 4f)),
-            "pkg:npm/aba@1", List.of(buildIssue(3, 8f)));
-    ProviderResponseHandler handler = new TestResponseHandler();
-
-    ProviderReport response =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
-
-    assertOkStatus(response);
-
-    // Validate aa has 1 direct and 1 transitive being the transitive the
-    // highestVulnerability
-    assertEquals(1, response.getSources().size());
-    Source source = response.getSources().get(TEST_SOURCE);
-    assertEquals(2, source.getDependencies().size());
-    DependencyReport report =
-        source.getDependencies().stream()
-            .filter(r -> "aa".equals(r.getRef().name()))
-            .findFirst()
-            .get();
-    assertEquals(1, report.getIssues().size());
-    assertEquals("aa", report.getRef().name());
-    assertEquals(4f, report.getHighestVulnerability().getCvssScore());
-    assertEquals("ISSUE-002", report.getHighestVulnerability().getId());
-
-    assertEquals(1, report.getTransitive().size());
-    TransitiveDependencyReport transitive = report.getTransitive().get(0);
-    assertEquals("aaa", transitive.getRef().name());
-
-    // Validate that ab has no issues and one transitive.
-    report =
-        source.getDependencies().stream()
-            .filter(r -> "ab".equals(r.getRef().name()))
-            .findFirst()
-            .get();
-    assertTrue(report.getIssues().isEmpty());
-    assertEquals("ab", report.getRef().name());
-    assertEquals(8f, report.getHighestVulnerability().getCvssScore());
-    assertEquals("ISSUE-003", report.getHighestVulnerability().getId());
-
-    assertEquals(1, report.getTransitive().size());
-    transitive = report.getTransitive().get(0);
-    assertEquals("aba", transitive.getRef().name());
+                .direct(2)
+                .transitive(4)
+                .total(6)
+                .high(2)
+                .medium(3)
+                .low(1)
+                .dependencies(6),
+            TEST_SOURCE),
+        // Case 5: 0 direct issues, 2 transitive
+        Arguments.of(
+            Map.of(
+                "pkg:npm/aaa@1", new PackageItem("pkg:npm/aaa@1", null, List.of(buildIssue(1, 5f))),
+                "pkg:npm/aab@1",
+                    new PackageItem("pkg:npm/aab@1", null, List.of(buildIssue(2, 7f)))),
+            tree().direct("aa").withTransitive("aaa").direct("ab").withTransitive("aab").build(),
+            new SourceSummary().direct(0).transitive(2).total(2).high(1).medium(1).dependencies(2),
+            TEST_SOURCE));
   }
 
   @Test
   public void testSorted() throws IOException {
-    Map<String, List<Issue>> issues =
+    Map<String, PackageItem> data =
         Map.of(
-            "pkg:npm/aa@1", List.of(buildIssue(1, 4f)),
-            "pkg:npm/aaa@1", List.of(buildIssue(2, 3f)),
-            "pkg:npm/aab@1", List.of(buildIssue(3, 1f)),
-            "pkg:npm/ab@1", List.of(buildIssue(4, 2f)),
-            "pkg:npm/aba@1", List.of(buildIssue(5, 3f)),
-            "pkg:npm/abb@1", List.of(buildIssue(6, 9f)),
-            "pkg:npm/abc@1", List.of(buildIssue(7, 6f)));
+            "pkg:npm/aa@1", new PackageItem("pkg:npm/aa@1", null, List.of(buildIssue(1, 4f))),
+            "pkg:npm/aaa@1", new PackageItem("pkg:npm/aaa@1", null, List.of(buildIssue(2, 3f))),
+            "pkg:npm/aab@1", new PackageItem("pkg:npm/aab@1", null, List.of(buildIssue(3, 1f))),
+            "pkg:npm/ab@1", new PackageItem("pkg:npm/ab@1", null, List.of(buildIssue(4, 2f))),
+            "pkg:npm/aba@1", new PackageItem("pkg:npm/aba@1", null, List.of(buildIssue(5, 3f))),
+            "pkg:npm/abb@1", new PackageItem("pkg:npm/abb@1", null, List.of(buildIssue(6, 9f))),
+            "pkg:npm/abc@1", new PackageItem("pkg:npm/abc@1", null, List.of(buildIssue(7, 6f))));
     ProviderResponseHandler handler = new TestResponseHandler();
 
     ProviderReport response =
         handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
+            Mockito.mock(Exchange.class), new ProviderResponse(data, null), buildTree());
 
     assertOkStatus(response);
-    DependencyReport reportHighest = getValidSource(response).getDependencies().get(0);
+    DependencyReport reportHighest = getValidSource(response, TEST_SOURCE).getDependencies().get(0);
     assertEquals("ab", reportHighest.getRef().name());
 
     assertEquals("abb", reportHighest.getTransitive().get(0).getRef().name());
     assertEquals("abc", reportHighest.getTransitive().get(1).getRef().name());
     assertEquals("aba", reportHighest.getTransitive().get(2).getRef().name());
 
-    DependencyReport reportLowest = getValidSource(response).getDependencies().get(1);
+    DependencyReport reportLowest = getValidSource(response, TEST_SOURCE).getDependencies().get(1);
     assertEquals("aa", reportLowest.getRef().name());
     assertEquals("aaa", reportLowest.getTransitive().get(0).getRef().name());
     assertEquals("aab", reportLowest.getTransitive().get(1).getRef().name());
@@ -249,234 +211,45 @@ public class ProviderResponseHandlerTest {
 
   @Test
   public void testHighestVulnerabilityInDirectDependency() throws IOException {
-    Map<String, List<Issue>> issues =
-        Map.of("pkg:npm/aa@1", List.of(buildIssue(1, 4f), buildIssue(2, 9f), buildIssue(3, 1f)));
+    Map<String, PackageItem> data =
+        Map.of(
+            "pkg:npm/aa@1",
+            new PackageItem(
+                "pkg:npm/aa@1",
+                null,
+                List.of(buildIssue(1, 4f), buildIssue(2, 9f), buildIssue(3, 1f))));
     ProviderResponseHandler handler = new TestResponseHandler();
 
     ProviderReport response =
         handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
+            Mockito.mock(Exchange.class), new ProviderResponse(data, null), buildTree());
 
     assertOkStatus(response);
-    DependencyReport highest = getValidSource(response).getDependencies().get(0);
+    DependencyReport highest = getValidSource(response, TEST_SOURCE).getDependencies().get(0);
     assertEquals("ISSUE-002", highest.getHighestVulnerability().getId());
     assertEquals(9f, highest.getHighestVulnerability().getCvssScore());
   }
 
   @Test
   public void testHighestVulnerabilityInTransitiveDependency() throws IOException {
-    Map<String, List<Issue>> issues =
+    Map<String, PackageItem> data =
         Map.of(
-            "pkg:npm/aa@1", Collections.emptyList(),
-            "pkg:npm/aaa@1", List.of(buildIssue(1, 4f), buildIssue(2, 9f), buildIssue(3, 1f)));
+            "pkg:npm/aa@1", new PackageItem("pkg:npm/aa@1", null, Collections.emptyList()),
+            "pkg:npm/aaa@1",
+                new PackageItem(
+                    "pkg:npm/aaa@1",
+                    null,
+                    List.of(buildIssue(1, 4f), buildIssue(2, 9f), buildIssue(3, 1f))));
     ProviderResponseHandler handler = new TestResponseHandler();
 
     ProviderReport response =
         handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
+            Mockito.mock(Exchange.class), new ProviderResponse(data, null), buildTree());
 
     assertOkStatus(response);
-    DependencyReport highest = getValidSource(response).getDependencies().get(0);
+    DependencyReport highest = getValidSource(response, TEST_SOURCE).getDependencies().get(0);
     assertEquals("ISSUE-002", highest.getHighestVulnerability().getId());
     assertEquals(9f, highest.getHighestVulnerability().getCvssScore());
-  }
-
-  @Test
-  public void testRecommendations() throws IOException {
-    PackageRef abRecommendation = new PackageRef("pkg:npm/ab@1-redhat-00001");
-    PackageRef acRecommendation = new PackageRef("pkg:npm/ac@1-redhat-00006");
-    Map<PackageRef, IndexedRecommendation> recommendations =
-        Map.of(
-            new PackageRef("pkg:npm/ab@1"),
-            new IndexedRecommendation(abRecommendation, Collections.emptyMap()),
-            acRecommendation, // recommend the same should be ignored
-            new IndexedRecommendation(acRecommendation, Collections.emptyMap()));
-
-    Map<String, List<Issue>> issues = Map.of("pkg:npm/aa@1", List.of(buildIssue(1, 4f)));
-
-    ProviderResponseHandler handler = new TestResponseHandler();
-
-    var report =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            new TrustedContentResponse(recommendations, null));
-    Source source = getValidSource(report);
-
-    assertEquals(1, source.getSummary().getRecommendations());
-    assertEquals(2, source.getDependencies().size());
-    assertTrue(
-        source.getDependencies().stream()
-            .anyMatch(d -> d.getRef().name().equals("aa") && d.getRecommendation() == null));
-    assertTrue(
-        source.getDependencies().stream()
-            .anyMatch(
-                d ->
-                    d.getRef().name().equals("ab")
-                        && d.getRecommendation().equals(abRecommendation)));
-    assertTrue(source.getDependencies().stream().noneMatch(d -> d.getRef().name().equals("ac")));
-  }
-
-  @Test
-  public void testRecommendationsWithoutIssues() throws IOException {
-    PackageRef abRecommendation = new PackageRef("pkg:npm/ab@1-redhat-00001");
-    PackageRef acRecommendation = new PackageRef("pkg:npm/ac@1-redhat-00006");
-    Map<PackageRef, IndexedRecommendation> recommendations =
-        Map.of(
-            new PackageRef("pkg:npm/ab@1"),
-            new IndexedRecommendation(abRecommendation, Collections.emptyMap()),
-            acRecommendation, // recommend the same should be ignored
-            new IndexedRecommendation(acRecommendation, Collections.emptyMap()));
-
-    Map<String, List<Issue>> issues = Collections.emptyMap();
-
-    ProviderResponseHandler handler = new TestResponseHandler();
-
-    var report =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            new TrustedContentResponse(recommendations, null));
-
-    assertNotNull(report);
-    assertNotNull(report.getSources());
-    Source source = report.getSources().get(TEST_PROVIDER);
-    assertNotNull(source);
-
-    assertEquals(1, source.getSummary().getRecommendations());
-    assertEquals(1, source.getDependencies().size());
-
-    assertTrue(
-        source.getDependencies().stream()
-            .anyMatch(
-                d ->
-                    d.getRef().name().equals("ab")
-                        && d.getRecommendation().equals(abRecommendation)));
-    assertTrue(source.getDependencies().stream().noneMatch(d -> d.getRef().name().equals("aa")));
-    assertTrue(source.getDependencies().stream().noneMatch(d -> d.getRef().name().equals("ac")));
-  }
-
-  @Test
-  public void testRemediations() throws IOException {
-    PackageRef abRemediation = new PackageRef("pkg:npm/ab@1-redhat-00008");
-    PackageRef aabRemediation = new PackageRef("pkg:npm/aab@1-redhat-00001");
-    PackageRef acRemediation = new PackageRef("pkg:npm/ac@1-redhat-00006");
-
-    Map<PackageRef, IndexedRecommendation> recommendations =
-        Map.of(
-            new PackageRef("pkg:npm/aab@1"),
-            new IndexedRecommendation(
-                aabRemediation, Map.of("CVE-003", new Vulnerability("cve-003", "Fixed", "test"))),
-            new PackageRef("pkg:npm/ab@1"),
-            new IndexedRecommendation(
-                abRemediation, Map.of("CVE-005", new Vulnerability("cve-005", "Affected", "test"))),
-            new PackageRef("pkg:npm/ac@1-redhat-00006"),
-            new IndexedRecommendation(
-                acRemediation,
-                Map.of(
-                    "CVE-007",
-                    new Vulnerability("cve-007", "Not Affected", "test"),
-                    "CVE-008",
-                    new Vulnerability("cve-008", null, "test"))));
-    Map<String, List<Issue>> issues =
-        Map.of(
-            "pkg:npm/aa@1", List.of(buildIssue(1, 4f)),
-            "pkg:npm/aaa@1", List.of(buildIssue(2, 3f)),
-            "pkg:npm/aab@1", List.of(buildIssue(3, 1f), buildIssue(4, 3f)),
-            "pkg:npm/ab@1", List.of(buildIssue(5, 2f)),
-            "pkg:npm/abb@1", List.of(buildIssue(6, 9f)),
-            "pkg:npm/ac@1-redhat-00006", List.of(buildIssue(7, 6f), buildIssue(8, 5f)));
-    ProviderResponseHandler handler = new TestResponseHandler();
-
-    var report =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, null),
-            buildTree(),
-            new TrustedContentResponse(recommendations, null));
-    Source source = getValidSource(report);
-    assertEquals(1, source.getSummary().getRecommendations());
-    assertEquals(1, source.getSummary().getRemediations());
-    assertEquals(3, source.getDependencies().size());
-
-    // ab has an affected vuln so it should not contain the remediation
-    var dep =
-        source.getDependencies().stream().filter(d -> d.getRef().name().equals("ab")).findFirst();
-    assertTrue(dep.isPresent());
-    assertEquals(1, dep.get().getIssues().size());
-    assertNull(dep.get().getIssues().get(0).getRemediation());
-
-    // aab has a remediation for cve-003 but not for cve-004
-    var tdep =
-        source.getDependencies().stream()
-            .filter(d -> d.getRef().name().equals("aa"))
-            .map(DependencyReport::getTransitive)
-            .flatMap(List::stream)
-            .filter(t -> t.getRef().name().equals("aab"))
-            .findFirst();
-    assertTrue(tdep.isPresent());
-    assertEquals(2, tdep.get().getIssues().size());
-    assertNull(tdep.get().getIssues().get(0).getRemediation());
-    assertEquals("CVE-004", tdep.get().getIssues().get(0).getCves().get(0));
-    assertEquals(
-        aabRemediation,
-        tdep.get().getIssues().get(1).getRemediation().getTrustedContent().getRef());
-    assertEquals("CVE-003", tdep.get().getIssues().get(1).getCves().get(0));
-
-    // ac the provider reports a vulnerability but TC says it's Not Affected
-    dep = source.getDependencies().stream().filter(d -> d.getRef().name().equals("ac")).findFirst();
-    assertTrue(dep.isPresent());
-    assertEquals(2, dep.get().getIssues().size());
-    assertEquals("CVE-007", dep.get().getIssues().get(0).getCves().get(0));
-    assertEquals("CVE-008", dep.get().getIssues().get(1).getCves().get(0));
-    assertNull(dep.get().getIssues().get(0).getRemediation());
-  }
-
-  @Test
-  void testUnscanned() throws IOException {
-    Map<String, List<Issue>> issues = Map.of("pkg:npm/aa@1", List.of(buildIssue(1, 5f)));
-    ProviderResponseHandler handler = new TestResponseHandler();
-    List<UnscannedDependency> unscanned =
-        List.of(
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aab@1")).reason("aab"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aabbb@1")).reason("aabbb"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aabbc@1")).reason("aabbc"));
-    DependencyTree tree = buildTree();
-    ProviderReport response =
-        handler.buildReport(
-            Mockito.mock(Exchange.class),
-            new ProviderResponse(issues, null, unscanned),
-            tree,
-            EMPTY_TRUSTED_CONTENT_RESPONSE);
-    assertOkStatus(response);
-    assertEquals(1, response.getSources().size());
-    Source report = response.getSources().get(TEST_SOURCE);
-    assertEquals(unscanned, report.getUnscanned());
-  }
-
-  @Test
-  void testUnscannedResponse() {
-    var unscanned =
-        List.of(
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aa@1")).reason("aa"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aaa@1")).reason("aaa"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/aab@1")).reason("aab"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/ab@1")).reason("ab"),
-            new UnscannedDependency().ref(new PackageRef("pkg:npm/abb@1")).reason("abb"));
-    var handler = new TestResponseHandler();
-    var response = handler.unscannedResponse(unscanned);
-    assertNotNull(response);
-    assertTrue(response.issues().isEmpty());
-    assertNull(response.status());
-    assertEquals(unscanned, response.unscanned());
   }
 
   private void assertOkStatus(ProviderReport response) {
@@ -489,10 +262,10 @@ public class ProviderResponseHandlerTest {
     assertEquals(TEST_PROVIDER, response.getStatus().getName());
   }
 
-  private Source getValidSource(ProviderReport report) {
+  private Source getValidSource(ProviderReport report, String sourceName) {
     assertNotNull(report);
     assertNotNull(report.getSources());
-    Source source = report.getSources().get(TEST_SOURCE);
+    Source source = report.getSources().get(sourceName);
     assertNotNull(source);
     return source;
   }
@@ -548,42 +321,78 @@ public class ProviderResponseHandlerTest {
     return DependencyTree.builder().dependencies(direct).build();
   }
 
-  private static DependencyTree buildTreeWithDuplicates() {
-    Map<PackageRef, DirectDependency> direct =
-        Map.of(
-            PackageRef.builder().name("aa").version("1").pkgManager(NPM_PURL_TYPE).build(),
+  private static DependencyTreeBuilder tree() {
+    return new DependencyTreeBuilder();
+  }
+
+  private static class DependencyTreeBuilder {
+    private final Map<PackageRef, DirectDependency> dependencies = new HashMap<>();
+    private PackageRef currentDirect;
+    private Set<PackageRef> currentTransitive = new HashSet<>();
+
+    DependencyTreeBuilder direct(String name) {
+      return direct(name, "1");
+    }
+
+    DependencyTreeBuilder direct(String name, String version) {
+      // Save previous direct dependency if exists
+      if (currentDirect != null) {
+        dependencies.put(
+            currentDirect,
             DirectDependency.builder()
-                .ref(PackageRef.builder().name("aa").version("1").pkgManager(NPM_PURL_TYPE).build())
+                .ref(currentDirect)
                 .transitive(
-                    Set.of(
-                        PackageRef.builder()
-                            .name("aaa")
-                            .version("1")
-                            .pkgManager(NPM_PURL_TYPE)
-                            .build(),
-                        PackageRef.builder()
-                            .name("aab")
-                            .version("1")
-                            .pkgManager(NPM_PURL_TYPE)
-                            .build()))
-                .build(),
-            PackageRef.builder().name("ab").version("1").pkgManager(NPM_PURL_TYPE).build(),
-            DirectDependency.builder()
-                .ref(PackageRef.builder().name("ab").version("1").pkgManager(NPM_PURL_TYPE).build())
-                .transitive(
-                    Set.of(
-                        PackageRef.builder()
-                            .name("aaa")
-                            .version("1")
-                            .pkgManager(NPM_PURL_TYPE)
-                            .build(),
-                        PackageRef.builder()
-                            .name("abb")
-                            .version("1")
-                            .pkgManager(NPM_PURL_TYPE)
-                            .build()))
+                    currentTransitive.isEmpty()
+                        ? Collections.emptySet()
+                        : Set.copyOf(currentTransitive))
                 .build());
-    return DependencyTree.builder().dependencies(direct).build();
+      }
+      // Start new direct dependency
+      currentDirect =
+          PackageRef.builder().name(name).version(version).pkgManager(NPM_PURL_TYPE).build();
+      currentTransitive = new HashSet<>();
+      return this;
+    }
+
+    DependencyTreeBuilder withTransitive(String... names) {
+      if (currentDirect == null) {
+        throw new IllegalStateException("Must call direct() before withTransitive()");
+      }
+      for (String name : names) {
+        currentTransitive.add(
+            PackageRef.builder().name(name).version("1").pkgManager(NPM_PURL_TYPE).build());
+      }
+      return this;
+    }
+
+    DependencyTree build() {
+      // Save last direct dependency
+      if (currentDirect != null) {
+        dependencies.put(
+            currentDirect,
+            DirectDependency.builder()
+                .ref(currentDirect)
+                .transitive(
+                    currentTransitive.isEmpty()
+                        ? Collections.emptySet()
+                        : Set.copyOf(currentTransitive))
+                .build());
+      }
+      return DependencyTree.builder().dependencies(dependencies).build();
+    }
+  }
+
+  /**
+   * @param ref - the recommendation reference
+   * @param cves - the vulnerabilities map CVE -> Status
+   * @return the tc recommendation
+   */
+  private static Recommendation buildRecommendation(String ref, Map<String, String> cves) {
+    return new Recommendation(
+        new PackageRef(ref),
+        cves.entrySet().stream()
+            .map(e -> new Vulnerability(e.getKey(), e.getValue(), e.getValue() + " justification"))
+            .toList());
   }
 
   private static Issue buildIssue(int id, Float score) {
@@ -594,6 +403,19 @@ public class ProviderResponseHandlerTest {
         .severity(SeverityUtils.fromScore(score))
         .cves(List.of(String.format("CVE-00%d", id)))
         .cvssScore(score);
+  }
+
+  private static Issue buildIssueWithTcRemediation(int id, Float score, String remediation) {
+    var r = new Remediation();
+    r.trustedContent(new RemediationTrustedContent().ref(new PackageRef(remediation)));
+    return new Issue()
+        .id(String.format("ISSUE-00%d", id))
+        .title(String.format("ISSUE Example 00%d", id))
+        .source(TEST_SOURCE)
+        .severity(SeverityUtils.fromScore(score))
+        .cves(List.of(String.format("CVE-00%d", id)))
+        .cvssScore(score)
+        .remediation(r);
   }
 
   private static class TestResponseHandler extends ProviderResponseHandler {
